--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   lottie: ^2.6.0
   shimmer: ^3.0.0
   flutter_spinkit: ^5.2.0
+  flutter_native_splash: ^2.3.1
 
   # Архітектура і управління станом
   provider: ^6.0.5
@@ -76,3 +77,20 @@ flutter:
           weight: 600
         - asset: assets/fonts/Montserrat-Bold.ttf
           weight: 700
+
+# Налаштування Splash Screen
+flutter_native_splash:
+  color: "#FFD700"  # Жовтий колір (Ваш AppTheme.primaryColor)
+  image: assets/images/logo.png  # Шлях до логотипу (потрібно створити або використати існуючий)
+  color_dark: "#121212"  # Темний фон для темної теми
+  image_dark: assets/images/logo.png  # Той самий або інший логотип для темної теми
+
+  android: true
+  ios: true
+  web: false
+
+  android_12:
+    image: assets/images/logo.png
+    icon_background_color: "#FFD700"
+    image_dark: assets/images/logo.png
+    icon_background_color_dark: "#121212"
