--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,15 +19,14 @@ dependencies:
   shimmer: ^3.0.0
   flutter_spinkit: ^5.2.0
   flutter_native_splash: ^2.3.1
+  speech_to_text: ^6.3.0
 
   # Архітектура і управління станом
   provider: ^6.0.5
   get_it: ^7.6.0
   dartz: ^0.10.1
 
-  # Bluetooth
-  # flutter_blue_plus: ^1.14.1
-  # flutter_bluetooth_serial: ^0.4.0
+  flutter_blue_plus: ^1.14.1
   permission_handler: ^10.4.3
 
   # База даних
